// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`glamor backend passes custom class names 1`] = `
<button
  className="Button___1 custom-class-name glamor-generated-class-name"
/>
`;

exports[`glamor backend renders class name 1`] = `
<button
  className="Button___0 glamor-generated-class-name"
/>
`;

exports[`glamor backend renders extended component name 1`] = `
<button
  className="RoundButton___3 glamor-generated-class-name"
/>
`;

exports[`glamor backend renders the alt class 1`] = `
<button
  className="Button___2 red___2 glamor-generated-class-name"
/>
`;
